added some services

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "AppConnectionString": "server=localhost;port=5432;database=odata_db;username=postgres;password=postgres"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
