added jwt token

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -10,5 +10,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "JwtSettings": {
+    "Issuer": "WebFeatures",
+    "Audience": "WebFeatures",
+    "Key": "56b5ab85-c017-4ae4-9102-c3d1219a6feb",
+    "Lifetime": "20"
+  }
 }
