started application tests

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "AppConnectionString": "server=localhost;port=5432;database=odata_db;username=postgres;password=postgres"
+    "Default": "server=localhost;port=5432;database=webfeatures_db;username=postgres;password=postgres"
   },
 
   "AllowedHosts": "*",
