--- a/src/JobServer/appsettings.json
+++ b/src/JobServer/appsettings.json
@@ -4,12 +4,14 @@
     "Hangfire": "server=localhost;port=5432;database=webfeatures_db;username=hangfire;password=hangfire"
   },
 
-  "AllowedHosts": "*",
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Hangfire": "Information"
+    }
+  },
 
-  "JwtSettings": {
-    "Issuer": "WebFeatures",
-    "Audience": "WebFeatures",
-    "Key": "56b5ab85-c017-4ae4-9102-c3d1219a6feb",
-    "Lifetime": "20"
-  }
+  "AllowedHosts": "*"
 }
