--- a/src/WebApi/Properties/launchSettings.json
+++ b/src/WebApi/Properties/launchSettings.json
@@ -4,7 +4,7 @@
   "profiles": {
     "WebApi": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
